manifests/06-portainer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9000
    targetPort: 9000
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: portainer
  namespace: portainer
subsets:
- addresses:
  - ip: 172.18.0.5  # Portainer Docker container IP on kind network
  ports:
  - name: http
    port: 9000
    protocol: TCP
